syntax ="proto3"; 
package ECP.B2b.Main.GrpcProxy.ProtoProxy;  
 
message HandleResultReply {

	enum DoResult
    {
        Failed = 0;
        Success = 1;
        OverTime = 2;
        Other = 255;
    }

	string DebugMessage=1;
	string PromptMsg=2;
	DoResult Result =3;
	string RetValue =4;
	string Tag = 5;
}